--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,17 @@ name = "HKGYMVS"
 version = "0.1.0"
 authors = ["longzezheng <longzezheng@126.com>"]
 edition = "2021"
-rust-version = "1.80.0"
+rust-version = "1.56.0"
 description = "海康工业相机的rust bindgen"
+documentation = "null"
+readme = "./README.md"
+homepage = "null"
 repository = "https://github.com/yuntao3568/HKGYMVS/"
+license = "MIT"
+keywords = ["HKGYMVS", "HKROBOT"]
+categories = ["api-bindings", "computer-vision"]
+
+
 
 
 [dependencies]
